--- a/app/components/general-container.hbs
+++ b/app/components/general-container.hbs
@@ -1,5 +1,11 @@
 <LinkTo @route="cart" class="cart-link">
-  <img src="/assets/images/cart.png" class="cart" />
+  {{!-- <img src="/assets/images/cart.png" class="cart" /> --}}
+  <i class="fa fa-shopping-cart"></i>
+  {{#if this.shoppingCart.itemList.length}}
+  <span class="cart-count d-inline-flex justify-content-center align-items-center">
+    {{this.itemCount}}
+  </span>
+  {{/if}}
 </LinkTo>
 
 <main class="container mt-5">
