--- a/app/templates/cart.hbs
+++ b/app/templates/cart.hbs
@@ -1,5 +1,6 @@
 <main class="container mt-5">
     <h1>Shopping Cart</h1>
+    
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <LinkTo @route="index">Home</LinkTo>
@@ -8,6 +9,20 @@
             Shpping Cart
         </li>
     </ol>
+    {{#each this.cart.itemList as |item|}}
+        <div class="cart-item d-flex align-items-center">
+            <div class="cart-item-thumbnail">
+                <img src={{item.image}} />
+            </div>
+            <div class="ml-3">
+                <h4>{{item.name}}</h4>
+                <i class="font-weight-bold">{{currency item.price}}</i>
+            </div>
+            <input type="number" class="ml-auto" value={{item.count}}
+            {{on "input" (fn this.updateItemCount item)}}
+             />
+        </div>
+    {{/each}}
     <section class="w-50 ml-auto text-right mb-5">
         <div class="row">
             <span class="col">Subtotal</span>
